Fix radio bezel overflowing on small screen

--- a/client/imports/app/radio/radio.component.scss
+++ b/client/imports/app/radio/radio.component.scss
@@ -32,6 +32,7 @@
     max-width: 640px;
     min-height: 0;
     padding: 24px;
+    width: 100%;
 }
 
 .radio-control,
